--- a/flight-planner-app/src/RegistrationForm.css
+++ b/flight-planner-app/src/RegistrationForm.css
@@ -54,6 +54,10 @@ input[type='number']:hover {
     border-color: #007bff;
 }
 
+.formFields {
+    padding: 5px;
+}
+
 button {
     width: 100%;
     padding: 15px;
